# coreargc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  conanfile.txt
CoreARGC/: CMakeLists.txt
CoreARGC/include/CoreARGC/: CollisionSystem.hpp  Component.hpp  Direction.hpp  Entity.hpp  GameContext.hpp  Grid.hpp  Hitbox.hpp  Item.hpp  Math.hpp  PhysicsSystem.hpp  Rigid.hpp  Stack.hpp  TextureRef.hpp  TextureSource.hpp  Timer.hpp
CoreARGC/src/: CollisionSystem.cpp  Component.cpp  Direction.cpp  Entity.cpp  GameContext.cpp  Grid.cpp  Hitbox.cpp  Item.cpp  PhysicsSystem.cpp  Rigid.cpp  Stack.cpp  TextureRef.cpp  TextureSource.cpp  Timer.cpp
CoreARGC/tests/: CMakeLists.txt  Entity_Test.cpp  Item_Test.cpp  Main_Test.cpp  MockEntity.hpp  Stack_Test.cpp
planefactory/: CMakeLists.txt
planefactory/include/Planefactory/: Miner.hpp  Ore.hpp
planefactory/include/Planefactory/Machines/: Belt.hpp
planefactory/include/Planefactory/Ores/: Coal.hpp  CoalOre.hpp  Iron.hpp  IronOre.hpp  Ore.hpp
planefactory/src/: Miner.cpp  Ore.cpp  PlanefactoryMain.cpp
planefactory/src/Machines/: Belt.cpp
planefactory/src/Ores/: Coal.cpp  CoalOre.cpp  Iron.cpp  IronOre.cpp  Ore.cpp
planeworld/: CMakeLists.txt
planeworld/include/Planeworld/: Character.hpp  Object.hpp  Wall.hpp
planeworld/src/: Character.cpp  Object.cpp  PlaneworldMain.cpp  Wall.cpp
sandbox/: CMakeLists.txt
sandbox/src/: SandboxMain.cpp
